fix textfield label wrapping

--- a/app/components/sign-up-page/index.css
+++ b/app/components/sign-up-page/index.css
@@ -71,6 +71,8 @@
   .sign-up-page__form-fields-container {
     max-width: 300px;
     width: 100%;
+    margin-right: 0;
+    margin-left: 0;
   }
 
 }
